Revert serie page to clean state: no flex centering, fixed height, no scrollbar

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -322,10 +322,7 @@ h1, h2, h3 {
 /* Serie page */
 .serie-container {
   height: calc(100vh - 50px);
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  padding-bottom: 190px; /* offset to equalise top/bottom gaps around content */
+  overflow: hidden;
 }
 
 /* Serie content */
@@ -333,30 +330,14 @@ h1, h2, h3 {
   display: flex;
   align-items: flex-end;
   justify-content: center;
-  padding-left: 0;
-  padding-right: 0;
+  padding-left: 40px;
+  padding-right: 40px;
 }
 
 /* Photo row: flex so side columns stretch to image height */
 .serie-container > .row:first-child {
   display: flex;
   align-items: stretch;
-}
-
-/* Widen image 50px each side by shrinking side columns */
-.serie-container > .row:first-child > .col-xs-2 {
-  width: calc(16.66667% - 50px);
-}
-.serie-container > .row:first-child > .col-xs-8 {
-  width: calc(66.66667% + 100px);
-}
-
-/* Align prev/next series with the photo row column boundaries */
-.serie-nav-row > .col-xs-2 {
-  width: calc(16.66667% - 50px);
-}
-.serie-nav-row > .col-xs-8 {
-  width: calc(66.66667% + 100px);
 }
 
 .serie-description {
